Did most of the merging.

--- a/config/bpe.config.json
+++ b/config/bpe.config.json
@@ -1,7 +1,7 @@
 [{
     "puzzle": {
         "genre": "wordnet",
-        "root": "living_thing.n.01",
+        "root": "dog.n.01",
         "numchoices": 5
     },
     "tokenizer": {
