Added metrics to the oddoneout dir.

--- a/config/bpe.config.json
+++ b/config/bpe.config.json
@@ -6,8 +6,8 @@
     },
     "tokenizer": {
         "name": "bpe",
-        "codes": "data/codes_10k",
-        "vocab": "data/vocab_10k.txt",
+        "codes": "data/wordnet.10k.codes",
+        "vocab": "data/wordnet.10k.vocab",
         "num_tokens": 5
     },
     "batchsize": 128,
